--- a/P005581.opf/layers/v001/Pagination.yml
+++ b/P005581.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: ab330b2732a8472198b3821fc7520ea7
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   1326b91f08b942a6a7ad1b29fcf102a7:
