--- a/P005581.opf/meta.yml
+++ b/P005581.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P005581
 initial_creation_type: ocr
+created_at: 30/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1GS49535
   title: མགོ་ལོག་རིག་གནས་ལོ་རྒྱུས། （༣）
